--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,14 @@ deny from all
 #AddHandler application/x-httpd-php .css
 php_flag zlib.output_compression On
 
+#Get rid of these
+php_flag magic_quotes_gpc 0
+php_flag magic_quotes_runtime 0
+php_flag register_globals 0
+
+# https://bugs.php.net/bug.php?id=42396
+php_flag detect_unicode 0
+
 RewriteEngine on
 RewriteBase /
 RewriteRule ^(.*)$ index.php?__req__=$1 [L,QSA]
