Here be dragons

--- a/mod/boris/.gitignore
+++ b/mod/boris/.gitignore
@@ -1,1 +1,10 @@
-repo/
+/vendor/
+*.swp
+boris.phar
+/TAGS
+/tests/_*
+/.dir-locals.el
+/elisp/boris-completion.elc
+/lib/Boris/#Completer.php#
+/lib/Boris/.#Completer.php
+.token
