Some naming conventions changed, some optimalizations

--- a/.htaccess
+++ b/.htaccess
@@ -16,7 +16,7 @@ php_flag register_globals 0
 # https://bugs.php.net/bug.php?id=42396
 php_flag detect_unicode 0
 
-SetEnv r3vDEBUG "TRUE"
+SetEnv r3v_DEBUG "TRUE"
 
 RewriteEngine on
 RewriteBase /
