Every now and then

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
-/init/config.php
+#sync tool
 teosync
-tags
+
+#sublime text project files
 *.sublime-*
+
+#r3v version marker
+#ex: dev, stable
+r3v_env.*
+#engine's configuration file
+config.json
