--- a/.htaccess
+++ b/.htaccess
@@ -5,6 +5,11 @@ order allow,deny
 deny from all
 </Files>
 
+FileETag None
+#disable sending server info & ver
+ServerSignature Off
+# ServerTokens Minor
+
 #AddHandler application/x-httpd-php .css
 php_flag zlib.output_compression On
 
@@ -12,6 +17,7 @@ php_flag zlib.output_compression On
 php_flag magic_quotes_gpc 0
 php_flag magic_quotes_runtime 0
 php_flag register_globals 0
+php_flag expose_php Off
 
 # https://bugs.php.net/bug.php?id=42396
 php_flag detect_unicode 0
